// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input props: getTheme: width:100,margin:10, 1`] = `
.c2 {
  cursor: text;
  line-height: 1.5;
  display: inline-block;
  font-family: inherit;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  font-size: 1.2rem;
  border-radius: 0.4rem;
  outline: none;
  width: 20rem;
  height: 2.666666666666667em;
  border-top-width: 0.1rem;
  border-top-style: solid;
  border-top-color: #cccccc;
  border-bottom-width: 0.1rem;
  border-bottom-style: solid;
  border-bottom-color: #cccccc;
  border-left-width: 0.1rem;
  border-left-style: solid;
  border-left-color: #cccccc;
  border-right-width: 0.1rem;
  border-right-style: solid;
  border-right-color: #cccccc;
}

.c2::-webkit-input-placeholder {
  color: #ccc;
}

.c2::-moz-placeholder {
  color: #ccc;
}

.c2:-ms-input-placeholder {
  color: #ccc;
}

.c2::placeholder {
  color: #ccc;
}

.c0 {
  z-index: 0;
  position: relative;
  display: inline-block;
  outline: none;
  border-radius: 0.4rem;
}

.c1 {
  position: relative;
  outline: none;
}

<span
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
>
  <div
    className="c0"
    style={Object {}}
  >
    <input
      autoFocus={false}
      className="c1   c2"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      size="default"
      style={
        Object {
          "color": "#333333",
          "height": "2.666666666666667em",
          "paddingLeft": "1rem",
          "paddingRight": "3.5rem",
        }
      }
      value=""
    />
  </div>
</span>
`;

exports[`Input props: null 1`] = `
.c2 {
  cursor: text;
  line-height: 1.5;
  display: inline-block;
  font-family: inherit;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  font-size: 1.2rem;
  border-radius: 0.4rem;
  outline: none;
  width: 20rem;
  height: 2.666666666666667em;
  border-top-width: 0.1rem;
  border-top-style: solid;
  border-top-color: #cccccc;
  border-bottom-width: 0.1rem;
  border-bottom-style: solid;
  border-bottom-color: #cccccc;
  border-left-width: 0.1rem;
  border-left-style: solid;
  border-left-color: #cccccc;
  border-right-width: 0.1rem;
  border-right-style: solid;
  border-right-color: #cccccc;
}

.c2::-webkit-input-placeholder {
  color: #ccc;
}

.c2::-moz-placeholder {
  color: #ccc;
}

.c2:-ms-input-placeholder {
  color: #ccc;
}

.c2::placeholder {
  color: #ccc;
}

.c0 {
  z-index: 0;
  position: relative;
  display: inline-block;
  outline: none;
  border-radius: 0.4rem;
}

.c1 {
  position: relative;
  outline: none;
}

<span
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
>
  <div
    className="c0"
    style={Object {}}
  >
    <input
      autoFocus={false}
      className="c1   c2"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      size="default"
      style={
        Object {
          "color": "#333333",
          "height": "2.666666666666667em",
          "paddingLeft": "1rem",
          "paddingRight": "3.5rem",
        }
      }
      value=""
    />
  </div>
</span>
`;

exports[`Input props: placeholder  1`] = `
.c2 {
  cursor: text;
  line-height: 1.5;
  display: inline-block;
  font-family: inherit;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  font-size: 1.2rem;
  border-radius: 0.4rem;
  outline: none;
  width: 20rem;
  height: 2.666666666666667em;
  border-top-width: 0.1rem;
  border-top-style: solid;
  border-top-color: #cccccc;
  border-bottom-width: 0.1rem;
  border-bottom-style: solid;
  border-bottom-color: #cccccc;
  border-left-width: 0.1rem;
  border-left-style: solid;
  border-left-color: #cccccc;
  border-right-width: 0.1rem;
  border-right-style: solid;
  border-right-color: #cccccc;
}

.c2::-webkit-input-placeholder {
  color: #ccc;
}

.c2::-moz-placeholder {
  color: #ccc;
}

.c2:-ms-input-placeholder {
  color: #ccc;
}

.c2::placeholder {
  color: #ccc;
}

.c0 {
  z-index: 0;
  position: relative;
  display: inline-block;
  outline: none;
  border-radius: 0.4rem;
}

.c1 {
  position: relative;
  outline: none;
}

<span
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
>
  <div
    className="c0"
    style={Object {}}
  >
    <input
      autoFocus={false}
      className="c1   c2"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      placeholder="请填写内容"
      size="default"
      style={
        Object {
          "color": "#333333",
          "height": "2.666666666666667em",
          "paddingLeft": "1rem",
          "paddingRight": "3.5rem",
        }
      }
      value=""
    />
  </div>
</span>
`;

exports[`Input props: placeholder  2`] = `
.c2 {
  cursor: text;
  line-height: 1.5;
  display: inline-block;
  font-family: inherit;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  font-size: 1.2rem;
  border-radius: 0.4rem;
  outline: none;
  width: 20rem;
  height: 2.666666666666667em;
  border-top-width: 0.1rem;
  border-top-style: solid;
  border-top-color: #cccccc;
  border-bottom-width: 0.1rem;
  border-bottom-style: solid;
  border-bottom-color: #cccccc;
  border-left-width: 0.1rem;
  border-left-style: solid;
  border-left-color: #cccccc;
  border-right-width: 0.1rem;
  border-right-style: solid;
  border-right-color: #cccccc;
}

.c2::-webkit-input-placeholder {
  color: #ccc;
}

.c2::-moz-placeholder {
  color: #ccc;
}

.c2:-ms-input-placeholder {
  color: #ccc;
}

.c2::placeholder {
  color: #ccc;
}

.c0 {
  z-index: 0;
  position: relative;
  display: inline-block;
  outline: none;
  border-radius: 0.4rem;
}

.c1 {
  position: relative;
  outline: none;
}

<span
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
>
  <div
    className="c0"
    style={Object {}}
  >
    <input
      autoFocus={false}
      className="c1   c2"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      placeholder=""
      size="default"
      style={
        Object {
          "color": "#333333",
          "height": "2.666666666666667em",
          "paddingLeft": "1rem",
          "paddingRight": "3.5rem",
        }
      }
      value=""
    />
  </div>
</span>
`;

exports[`Input props: size 1`] = `
.c2 {
  cursor: text;
  line-height: 1.5;
  display: inline-block;
  font-family: inherit;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  font-size: 1.2rem;
  border-radius: 0.4rem;
  outline: none;
  width: 20rem;
  height: 2.666666666666667em;
  border-top-width: 0.1rem;
  border-top-style: solid;
  border-top-color: #cccccc;
  border-bottom-width: 0.1rem;
  border-bottom-style: solid;
  border-bottom-color: #cccccc;
  border-left-width: 0.1rem;
  border-left-style: solid;
  border-left-color: #cccccc;
  border-right-width: 0.1rem;
  border-right-style: solid;
  border-right-color: #cccccc;
}

.c2::-webkit-input-placeholder {
  color: #ccc;
}

.c2::-moz-placeholder {
  color: #ccc;
}

.c2:-ms-input-placeholder {
  color: #ccc;
}

.c2::placeholder {
  color: #ccc;
}

.c0 {
  z-index: 0;
  position: relative;
  display: inline-block;
  outline: none;
  border-radius: 0.4rem;
}

.c1 {
  position: relative;
  outline: none;
}

<span
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
>
  <div
    className="c0"
    style={Object {}}
  >
    <input
      autoFocus={false}
      className="c1   c2"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      size="small"
      style={
        Object {
          "color": "#333333",
          "height": "2em",
          "paddingLeft": "1rem",
          "paddingRight": "3.5rem",
        }
      }
      value=""
    />
  </div>
</span>
`;

exports[`Input props: size 2`] = `
.c2 {
  cursor: text;
  line-height: 1.5;
  display: inline-block;
  font-family: inherit;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  font-size: 1.2rem;
  border-radius: 0.4rem;
  outline: none;
  width: 20rem;
  height: 2.666666666666667em;
  border-top-width: 0.1rem;
  border-top-style: solid;
  border-top-color: #cccccc;
  border-bottom-width: 0.1rem;
  border-bottom-style: solid;
  border-bottom-color: #cccccc;
  border-left-width: 0.1rem;
  border-left-style: solid;
  border-left-color: #cccccc;
  border-right-width: 0.1rem;
  border-right-style: solid;
  border-right-color: #cccccc;
}

.c2::-webkit-input-placeholder {
  color: #ccc;
}

.c2::-moz-placeholder {
  color: #ccc;
}

.c2:-ms-input-placeholder {
  color: #ccc;
}

.c2::placeholder {
  color: #ccc;
}

.c0 {
  z-index: 0;
  position: relative;
  display: inline-block;
  outline: none;
  border-radius: 0.4rem;
}

.c1 {
  position: relative;
  outline: none;
}

<span
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
>
  <div
    className="c0"
    style={Object {}}
  >
    <input
      autoFocus={false}
      className="c1   c2"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      size="large"
      style={
        Object {
          "color": "#333333",
          "height": "3.3333333333333335em",
          "paddingLeft": "1rem",
          "paddingRight": "3.5rem",
        }
      }
      value=""
    />
  </div>
</span>
`;
